--- a/Framework/Skyline.Framework/Skyline.Framework/Skyline.Framework.csproj
+++ b/Framework/Skyline.Framework/Skyline.Framework/Skyline.Framework.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="protobuf-net">
+      <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -55,10 +61,14 @@
     <Compile Include="Business\Rules\FileNameContainsRule.cs" />
     <Compile Include="Business\Rules\FileNameMatchRule.cs" />
     <Compile Include="Core\AppSettingsManager.cs" />
+    <Compile Include="Core\AssemblyHelper.cs" />
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Core\Singleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Disposable.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
