--- a/Skyline.Framework/Skyline.Framework.csproj
+++ b/Skyline.Framework/Skyline.Framework.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Core\Logger.cs" />
     <Compile Include="Core\Singleton.cs" />
+    <Compile Include="IO\FileSystemWatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Disposable.cs" />
   </ItemGroup>
