unnecessary methods removed .net 5 & C# 9 upgrade some cleanup and minor refactor

--- a/src/CleanMyDesktop.Core/CleanMyDesktop.Core.csproj
+++ b/src/CleanMyDesktop.Core/CleanMyDesktop.Core.csproj
@@ -12,8 +12,12 @@
   </PropertyGroup>
  
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
+    <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+ 
+  <ItemGroup>
+    <Folder Include="Business\Actions\" />
   </ItemGroup>
 
 </Project>
